[tool.poetry]
name = "ansible-role-pyenv-poetry"
version = "0.8.0"
description = "Ansible role for installing pyenv and Poetry"
authors = ["Logan Land <logan@llbbl.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
molecule = ">=6.0.0"
molecule-docker = ">=2.1.0"
ansible-core = ">=2.20.0"
ansible-lint = ">=6.0.0"
docker = ">=6.0.0"
pytest = ">=7.0.0"
pytest-testinfra = ">=9.0.0"
yamllint = ">=1.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
